--- a/gb/20/8/17/n12337343.md
+++ b/gb/20/8/17/n12337343.md
@@ -1,63 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ssdabc3483/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ssdabc3483/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ssdabc3483/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>竹市危老建筑说明会持续推动 期翻转城市风貌</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/e3c978b46d84e104152d3f62fda593a3-600x400.jpg" />
 <h6>竹市府都发处17日办理“危老建筑行动教室行销说明会”，与担任辅导团队的中华大学共同藉由说明会的方式，提供各界相关专家学者、机关、公会代表及在地市民一个对话与交流的场域。（左起：中华大学副校长解鸿年、内政部营建署都更组第三科科长黄冠华、新竹市都发处都更科科长陈昭蓉）。（中华大学危老重建辅导团提供）
 </h6>
 <hr>
-<p>【大纪元2020年08月17日讯】（大纪元记者林倩玉台湾新竹报导）新竹市政府自2017年推动<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E5%8D%B1%E8%80%81%E9%87%8D%E5%BB%BA.md#1">危老重建</a>（都市危险及老旧建筑物加速重建）至今（17日）为止已核定34件。为了持续推动危老建物更新，共同翻转竹市都市风貌，竹市府<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E9%83%BD%E5%8F%91%E5%A4%84.md#1">都发处</a>今日办理“危老建筑行动教室行销说明会”，与担任辅导团队的<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E5%A4%A7%E5%AD%A6.md#1">中华大学</a>共同藉由说明会的方式，提供各界相关专家学者、机关、公会代表及在地市民一个对话与交流的场域。内政部营建署都更组第三科科长黄冠华亦亲临指导。</p>
-<p>黄冠华表示，内政部营建署都更组第三科负责<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E5%8D%B1%E8%80%81%E9%87%8D%E5%BB%BA.md#1">危老重建</a>及都更业务，新竹市双北以外申请案件量最多的都市，2017年至今天为止申请案量近50件，核准案量34件。新竹市处理危老重建案，在规定时间内另加了审议及审查制度，营建署一度认为会延宕时效。事实证明新竹市不但做到了，且做的更好更全面，其他县市政府也跟着效仿。</p>
-<p>今年危老条例修正后，虽将原有百分之10的危老重建时程奖励降为百分之8并逐年递减，但同时有新的奖励上路；危老建筑物基地加计合并邻地面积达200平方公尺者，给予基准容积百分之2奖励，加计原有的8%时程奖励，总计仍可享有百分之10的<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E5%AE%B9%E7%A7%AF%E5%A5%96%E5%8A%B1.md#1">容积奖励</a>。</p>
-<p>新竹市<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E9%83%BD%E5%8F%91%E5%A4%84.md#1">都发处</a>都更科科长陈昭蓉说明，危老重建只要符合30年以上屋龄的合法建筑、且经过建筑师签证确认有安全问题的房子就可申请，竹市府在2019年还订了放宽条例，针对竹市小地主额外给<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E5%AE%B9%E7%A7%AF%E5%A5%96%E5%8A%B1.md#1">容积奖励</a>，就是要鼓励拥有老旧建筑的市民踊跃申请。</p>
-<p><ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E5%A4%A7%E5%AD%A6.md#1">中华大学</a>副校长解鸿年指出，中华大学希望善尽大学社会责任，辅导市民评估、规划及争取中央补助，目前市府已经举办30场次行动教室及12场次教育训练，参与市民超过1千400人次，中华大学危老重建辅导团今年辅导件数已超过10件，持续协助市府落实都市永续发展利用目标。</p>
+<p>【大纪元2020年08月17日讯】（大纪元记者林倩玉台湾新竹报导）新竹市政府自2017年推动<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%B1%E8%80%81%E9%87%8D%E5%BB%BA.md#1">危老重建</a>（都市危险及老旧建筑物加速重建）至今（17日）为止已核定34件。为了持续推动危老建物更新，共同翻转竹市都市风貌，竹市府<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%BD%E5%8F%91%E5%A4%84.md#1">都发处</a>今日办理“危老建筑行动教室行销说明会”，与担任辅导团队的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E5%A4%A7%E5%AD%A6.md#1">中华大学</a>共同藉由说明会的方式，提供各界相关专家学者、机关、公会代表及在地市民一个对话与交流的场域。内政部营建署都更组第三科科长黄冠华亦亲临指导。</p>
+<p>黄冠华表示，内政部营建署都更组第三科负责<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%B1%E8%80%81%E9%87%8D%E5%BB%BA.md#1">危老重建</a>及都更业务，新竹市双北以外申请案件量最多的都市，2017年至今天为止申请案量近50件，核准案量34件。新竹市处理危老重建案，在规定时间内另加了审议及审查制度，营建署一度认为会延宕时效。事实证明新竹市不但做到了，且做的更好更全面，其他县市政府也跟着效仿。</p>
+<p>今年危老条例修正后，虽将原有百分之10的危老重建时程奖励降为百分之8并逐年递减，但同时有新的奖励上路；危老建筑物基地加计合并邻地面积达200平方公尺者，给予基准容积百分之2奖励，加计原有的8%时程奖励，总计仍可享有百分之10的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AE%B9%E7%A7%AF%E5%A5%96%E5%8A%B1.md#1">容积奖励</a>。</p>
+<p>新竹市<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%BD%E5%8F%91%E5%A4%84.md#1">都发处</a>都更科科长陈昭蓉说明，危老重建只要符合30年以上屋龄的合法建筑、且经过建筑师签证确认有安全问题的房子就可申请，竹市府在2019年还订了放宽条例，针对竹市小地主额外给<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AE%B9%E7%A7%AF%E5%A5%96%E5%8A%B1.md#1">容积奖励</a>，就是要鼓励拥有老旧建筑的市民踊跃申请。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E5%A4%A7%E5%AD%A6.md#1">中华大学</a>副校长解鸿年指出，中华大学希望善尽大学社会责任，辅导市民评估、规划及争取中央补助，目前市府已经举办30场次行动教室及12场次教育训练，参与市民超过1千400人次，中华大学危老重建辅导团今年辅导件数已超过10件，持续协助市府落实都市永续发展利用目标。</p>
 <p>责任编辑：郑桦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/19/7/4/n11363363.md#1">维州易燃包层危机：官方发现更多高危建筑</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13611231.md#1">纪念二二八 林智坚：民主火炬接棒守护台湾</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13611161.md#1">竹市三大赏樱胜地樱花陆续绽放 花期到4月</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13608635.md#1">苗栗旅游节“用栗买起来”</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/25/n13604457.md#1">苗县长勘查草莓裂果灾损 吁尽速争取灾害救助</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/25/n13604414.md#1">选择优美说再见、尊严善终 您可以这样做</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/24/n13601564.md#1">鲁冰花季 苗栗茶产业行销</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/24/n13601439.md#1">洋国实业公司捐赠交通车、复康巴士 回馈家乡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/4/n11363363.md#1">维州易燃包层危机：官方发现更多高危建筑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/17/n12337199.md#1">针对第2期扩建计划用地征收 科管局办公听会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/17/n12337241.md#1">横山深夜巡警眼尖 保育穿山甲幸免不测</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/17/n12337161.md#1">台湾智慧水联网启动 全天候观测防治水污染</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/15/n12333505.md#1">用艺术做公益 谢珮珍举办个展义卖助弱势</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/15/n12333217.md#1">注入玻工活力 2020金玻奖“透明姿态”开幕颁奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/15/n12332463.md#1">风雨后现彩虹 家扶中心获企业大宗物资捐赠</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/15/n12331533.md#1">跟着穿山甲走读大自然 北埔图书馆举办展览</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/13/n12328238.md#1">竹市“细水逐流”环境教育展教你创意玩水</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/12/n12325191.md#1">大雨落石车困山区  横山警助民众脱困返家</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/28/n10597749.md#1" target="_blank">林辉：因曾与美国上将同台 燕大教授一家凄惨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/26/n11478084.md#1" target="_blank">翻译家巫宁坤爱国竟受难 历劫著书留警训</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/21/n13594841.md#1">【未解之谜】梅辛传之四：权势抵不过天意</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13611754.md#1">【新闻看点】李莹案更多细节曝光 习再遇难题？</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612301.md#1">【远见快评】俄入侵闪电战失败 国际秩序重组</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612020.md#1">【探索时分】乌反击俄利器：标枪反坦克导弹</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/25/n13605832.md#1">保持心脏健康 营养师推荐在Costco买六种食物</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607072.md#1">【更新2.26】俄军遭遇后勤挑战与坚定抵抗</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13608596.md#1">徐州铁链女事件持续发酵 中国金融圈怒了</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13607417.md#1">《维京传奇：英灵神殿》影评：复仇成功 只是挑战的开始</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13606670.md#1">每个人在选择油漆颜色时都会犯的6个错误</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ssdabc3483/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ssdabc3483/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/17/n12337343.htm">竹市危老建筑说明会持续推动 期翻转城市风貌</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/17/n12337343.htm">竹市危老建筑说明会持续推动 期翻转城市风貌</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ssdabc3483/djy/blob/master/gb/20/8/17/n12337343.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ssdabc3483/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ssdabc3483/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/8/17/n12337343.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
